added list functionality of scores

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,11 @@ code {
     monospace;
 }
 
-
+input, li{
+  font-size: 3rem!important;
+  color: rgb(210, 31, 84);
+  list-style-type: none;
+}
 
 *,
 *::before,
@@ -40,10 +44,16 @@ code {
     font-size: 62.5%;
     margin: 0;
     padding: 0;
-    font-family: 'Hanalei', cursive!important;
+    font-family: 'Anton', sans-serif;
+
 }
 
-
+.btn{
+  background-color: rgb(210, 31, 84);
+  font-size: 3rem;
+  padding: 2rem;
+  margin: 1rem;
+}
 
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -67,4 +77,13 @@ html{
 
 .light-text{
   color: rgb(243, 76, 126)!important;
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+}
+
+h1{
+    font-family: 'Hanalei', cursive!important;
 }
