fixed key duplication error through sorting

--- a/src/index.css
+++ b/src/index.css
@@ -31,10 +31,18 @@ code {
     monospace;
 }
 
-input, li{
+input{
   font-size: 3rem!important;
   color: rgb(210, 31, 84);
   list-style-type: none;
+  text-align: center;
+}
+
+li{
+  font-size: 3rem!important;
+  list-style-type: none;
+  text-align: center;
+  color: white;
 }
 
 *,
@@ -81,7 +89,10 @@ html{
 
 form{
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
+  width: 100%;
 }
 
 h1{
