--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,12 @@ input{
   color: rgb(210, 31, 84);
   list-style-type: none;
   text-align: center;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+input:focus{
+  background-color: rgba(255, 255, 255, 0.8);
+
 }
 
 li{
@@ -96,5 +102,107 @@ form{
 }
 
 h1{
-    font-family: 'Hanalei', cursive!important;
+    font-family: 'Hanalei', cursive;
 }
+
+
+/* GITHUB ANIMATIONS */
+  .fancy-link{
+    margin-top: 1rem;
+    display: block;
+    font-family: sans-serif;
+    text-decoration: none;
+    color: #333;
+    border: 2px solid #333;
+    letter-spacing: 2px;
+    text-align: center;
+    position: relative;
+    transition: all .35s;
+    width: 150px;
+    height: 40px;
+    line-height: 40px;
+    font-size: 18px;
+  }
+
+  .fancy-link span{
+    position: relative;
+    z-index: 2;
+  }
+
+  .fancy-link:after{
+    background: #ff003b;
+    transition: all .35s;
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+
+  }
+
+  .fancy-link:hover{
+    color: #fff;
+  }
+
+  .fancy-link:hover:after{
+    width: 100%;
+  }
+
+/* END OF GITHUB ANIMATIONS */
+
+
+/* TITLE ANIMATION */
+
+
+@keyframes upAnim{
+
+  0%{
+    transform: translateY(0) scaleY(1) scaleX(1);
+  }
+
+  40%{
+    transform: translateY(-1.1rem) scaleY(1.3) scaleX(0.9);
+
+  }
+
+  50%{
+    transform: translateY(-1.2rem) scaleY(1) scaleX(1);
+    color: rgb(243, 128, 128);
+  }
+
+  80%{
+    transform: translateY(0) scaleY(.7) scaleX(1.3);
+  }
+
+  100%{
+    transform: translateY(0) scaleY(1) scaleX(1);
+  }
+
+
+}
+
+.hover0{
+  animation: upAnim 1s 0.125s ease-out;
+}
+
+.hover1{
+  animation: upAnim 1s 0.125s ease-out;
+}
+
+.hover2{
+  animation: upAnim 1s 0.25s ease-out;
+}
+
+.hover3{
+  animation: upAnim 1s 0.375s ease-out;
+}
+
+.hover4{
+  animation: upAnim 1s 0.5s ease-out;
+}
+
+.hover5{
+  animation: upAnim 1s 0.625s ease-out;
+}
+
